feat&test: 태그 기능 구현 및 테스트